[package]
name = "crypto_testing"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
chacha20poly1305 = "0.10.1"
openssl = { version = "0.10.72", features = ["vendored"] }
rand = "0.8.5"
bincode = { version = "2.0.1", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
hkdf = "0.12.4"
sha2 = "0.10.8"
kychacha_crypto = "2.0.2"
serde_bytes = "0.11.17"
criterion-perf-events = "0.4.0"
perfcnt = "0.8.0"

[dev-dependencies]
criterion = { version = "2.10.1", package = "codspeed-criterion-compat", features = ["csv_output", "html_reports"] }

[[bench]]
name = "kyber_bench"
harness = false

[[bench]]
name = "rsa_bench"
harness = false

[[bench]]
name = "dh25519_bench"
harness = false
