[package]
name = "crypto_testing"
version = "0.1.0"
edition = "2024"

[dependencies]
chacha20poly1305 = "0.10.1"
openssl = { version = "0.10.72", features = ["vendored"] }
rand = "0.8.5"
bincode = { version = "2.0.1", features = ["serde"] }
hkdf = "0.12.4"
sha2 = "0.10.8"
kychacha_crypto = "4"
iai-callgrind = "0.15.1"
oqs = "0.11.0"

[dev-dependencies]


[[bench]]
name = "kyber_bench"
harness = false

[[bench]]
name = "rsa_bench"
harness = false

[[bench]]
name = "SECP384R1_bench"
harness = false
